// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Impersonate > matches snapshot when impersonating a user 1`] = `
<DocumentFragment>
  <div
    class="unit-header-container"
  >
    <div
      class="unit-header"
    >
      <div
        class="image "
      >
        <svg
          id="OBJECTS"
          viewBox="0 0 296.11 370.03"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M229.45,117.57c-.71,0-1.42-.09-2.13-.29L54.91,69.7c-4.26-1.18-6.76-5.58-5.58-9.84,1.18-4.26,5.58-6.76,9.84-5.58l172.41,47.58c4.26,1.18,6.76,5.58,5.58,9.84-.98,3.55-4.2,5.87-7.71,5.87Z"
          />
          <path
            d="M57.03,117.57c-3.51,0-6.73-2.33-7.71-5.87-1.17-4.26,1.32-8.66,5.58-9.84L227.32,54.28c4.26-1.17,8.66,1.32,9.84,5.58,1.17,4.26-1.32,8.66-5.58,9.84L59.16,117.28c-.71,.2-1.43,.29-2.13,.29Z"
          />
          <path
            d="M76.94,209.29c-.21,0-.42,0-.63-.02-4.41-.35-7.7-4.2-7.35-8.6l7.19-91.72c.35-4.4,4.21-7.69,8.6-7.35,4.41,.35,7.7,4.2,7.35,8.6l-7.19,91.72c-.33,4.19-3.83,7.38-7.97,7.38Z"
          />
          <path
            d="M207.42,176.55l-11.57-65.59c-.77-4.35,2.14-8.5,6.49-9.27,4.35-.77,8.5,2.14,9.27,6.49l11.57,65.59-15.76,2.78Z"
          />
          <path
            d="M65.39,225.47c19.6-25.36,53.49-38.2,84.89-36.29,18.1,1.1,36.36,3.91,54.4,.67,5.29-.95,10.3-2.61,15.22-4.76,3.86-1.7,8.03-4.5,12.4-3.02,7.56,2.57,6.49,11.51,.97,15.51-8.33,6.03-20.77,7.53-30.67,8.3-12.68,1-25.42,.51-38.11,1.28-4.42,.27-7.41,3.34-7.74,7.74-.54,7.21-.42,14.62,.41,21.8,.35,3.09,2.13,6.91,5.68,7.46,19.18,2.99,37.15,19.11,48.01,35.19,3.55,5.25,20.28,31.81,3.23,30.42-6.59-.54-11.18-7.05-14.39-12.15-4.45-7.07-8.32-14.23-14.1-20.36-9.26-9.82-21.25-18.83-35.53-16.02-13.15,2.59-24.85,15.58-30.12,27.43-3.94,8.86-3.63,22.96-16.17,24.08-15.53,1.39-4.03-26.9-1-33.21,4.67-9.75,12.19-17.83,20.86-25.44,5.19-4.55,12.62-6.36,14.52-13.8,2.04-7.96,.7-16.89-.27-24.88-.6-5.01-4.45-8.78-9.8-7.46-9.8,2.41-19.9,6.11-27.99,12.26-4.04,3.07-7.92,6.31-11.76,9.63-4.88,4.22-11.5,12.29-19.04,10.44-6.17-1.52-5.4-12.34-2.7-16.38,5.56-8.3-7.84-16.06-13.36-7.81-5.81,8.68-5.1,21.86,.25,30.66,7.07,11.62,23.36,10.98,33.63,4.26,6.99-4.57,12.96-11.06,19.43-16.37,2.06-1.69-.82,.58,1.36-1.06,1.17-.88,2.33-1.78,3.57-2.56,6.27-3.97,13.58-6.38,20.73-8.14l-9.8-7.46c.6,4.96,1.45,10.02,1.23,15.03-.07,1.46-.29,2.89-.35,4.35-.04,.86-.43,1.7,.03,1.14,.23-.28-2.71,1.18-3.19,1.48-1.57,.99-3.04,2.13-4.49,3.28-2.9,2.29-5.6,4.8-8.18,7.43-8.17,8.32-15.16,16.67-19.8,27.49-6.19,14.43-13.72,38.05,2.51,48.74,13.26,8.74,31.93,1.17,38.46-12.56,2.85-5.99,3.13-12.72,6.29-18.69,2.9-5.48,7.81-11.15,13.05-14.48,13.01-8.26,26.72,7.78,32.97,17.79,8.89,14.23,19.3,32.22,39.16,28.28,8.12-1.61,14.32-7.89,16.34-15.86,2.41-9.47-1.36-17.97-5.64-26.25-7.83-15.16-19.1-28.36-32.71-38.61-8.98-6.75-19.85-13.01-31.12-14.76l5.68,7.46c-.82-7.18-.95-14.59-.41-21.8l-7.74,7.74c24.29-1.48,50.49,1.56,73.03-9.65,9.82-4.89,16.81-14.4,15.6-25.71-1.21-11.32-10.27-19.95-21.54-21.02-5.85-.55-11.11,1.58-16.32,3.99-5.47,2.52-11.13,4.27-17.13,5.05-11.47,1.49-23.29,.29-34.77-.6-19.84-1.54-38.8-1.63-57.88,5.13-19.22,6.81-38.41,18.37-51.03,34.7-2.57,3.33-3.19,7.69,0,10.94,2.64,2.7,8.39,3.3,10.94,0Z"
          />
          <path
            d="M141.93,189.22c-22.48,0-40.78-18.29-40.78-40.77s18.29-40.77,40.78-40.77,40.77,18.29,40.77,40.77-18.29,40.77-40.77,40.77Zm0-65.55c-13.66,0-24.78,11.11-24.78,24.77s11.11,24.77,24.78,24.77,24.77-11.11,24.77-24.77-11.11-24.77-24.77-24.77Z"
          />
        </svg>
      </div>
      <div
        class="obj-name"
      >
        <div
          class="meta-info-container"
        >
          <div
            class="meta-info"
          >
            <h1>
              Who do you want to be?
            </h1>
          </div>
        </div>
      </div>
      <div
        class="action-menu-container"
      />
    </div>
  </div>
  <div
    class="mod-impersonate-container"
  >
    <div
      class="mod-impersonate"
    >
      <div
        class="impersonate"
      >
        <div
          class="select-field"
        >
          <label
            for="Organisation"
          >
            Organisation
          </label>
          <div
            class="select-field-inner"
          >
            <div
              class="input-select-inner css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-4-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class="select-inner__control css-13cymwt-control"
              >
                <div
                  class="select-inner__value-container css-hlgwow"
                >
                  <div
                    class="select-inner__placeholder css-1jqq78o-placeholder"
                    id="react-select-4-placeholder"
                  >
                    Search and select an organisation to narrow the search result for users...
                  </div>
                  <div
                    class="select-inner__input-container css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-4-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class="select-inner__input"
                      id="react-select-4-input"
                      role="combobox"
                      spellcheck="false"
                      style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="select-inner__indicators css-1wy0on6"
                >
                  <span
                    class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sds--checkbox-container sds--tooltip-parent checkbox "
        >
          <input
            id="organisationAdminsOnly"
            type="checkbox"
          />
          <label
            for="organisationAdminsOnly"
          >
            <span
              class="sds--checkbox--visual"
            >
              <svg
                height="11.9"
                viewBox="0 0 13.6 11.9"
                width="13.6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.9.4-7 9.6-3.3-3.2c-.4-.4-1-.4-1.3 0-.4.4-.4 1 0 1.3l3.2 3.2q.6.6 1.5.6c.9 0 1.1-.3 1.4-.8l7.1-9.6c.3-.4.2-1-.2-1.3-.5-.3-1.1-.2-1.4.2"
                />
              </svg>
            </span>
            <span
              class="checkbox--text"
            >
              Only show the admins of organisations
            </span>
          </label>
        </div>
        <div
          class="select-field"
        >
          <label
            for="Collaboration"
          >
            Collaboration
          </label>
          <div
            class="select-field-inner"
          >
            <div
              class="input-select-inner css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-5-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class="select-inner__control css-13cymwt-control"
              >
                <div
                  class="select-inner__value-container css-hlgwow"
                >
                  <div
                    class="select-inner__placeholder css-1jqq78o-placeholder"
                    id="react-select-5-placeholder"
                  >
                    Search and select a collaboration to narrow the search result for users...
                  </div>
                  <div
                    class="select-inner__input-container css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-5-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class="select-inner__input"
                      id="react-select-5-input"
                      role="combobox"
                      spellcheck="false"
                      style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="select-inner__indicators css-1wy0on6"
                >
                  <span
                    class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sds--checkbox-container sds--tooltip-parent checkbox "
        >
          <input
            id="collaborationAdminsOnly"
            type="checkbox"
          />
          <label
            for="collaborationAdminsOnly"
          >
            <span
              class="sds--checkbox--visual"
            >
              <svg
                height="11.9"
                viewBox="0 0 13.6 11.9"
                width="13.6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.9.4-7 9.6-3.3-3.2c-.4-.4-1-.4-1.3 0-.4.4-.4 1 0 1.3l3.2 3.2q.6.6 1.5.6c.9 0 1.1-.3 1.4-.8l7.1-9.6c.3-.4.2-1-.2-1.3-.5-.3-1.1-.2-1.4.2"
                />
              </svg>
            </span>
            <span
              class="checkbox--text"
            >
              Only show the admins of collaborations
            </span>
          </label>
        </div>
        <section
          class="user-search"
        >
          <div
            class="search"
            tabindex="-1"
          >
            <label
              class="autocomplete-label"
              for="user"
            >
              User
            </label>
            <span
              class="outer-search"
            >
              <input
                class=""
                placeholder="Search and select a user to impersonate..."
                type="text"
                value=""
              />
            </span>
          </div>
        </section>
        <div
          class="input-field sds--text-field  "
        >
          <label
            for="Impersonation"
          >
            Impersonation
          </label>
          <div
            class="inner-input-field"
          >
            <input
              class="sds--text-field--input sds--text-field--input"
              disabled=""
              maxlength="255"
              placeholder=""
              type="text"
              value="You are who you are - no impersonation"
            />
          </div>
        </div>
        <section
          class="actions"
        >
          <button
            class="sds--btn sds--btn--secondary     "
            disabled=""
            type="button"
          >
            <span
              class="textual"
            >
              Stop impersonating
            </span>
          </button>
          <button
            class="sds--btn sds--btn--primary     "
            type="button"
          >
            <span
              class="textual"
            >
              Impersonate
            </span>
          </button>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Impersonate > matches snapshot when not impersonating a user 1`] = `
<DocumentFragment>
  <div
    class="unit-header-container"
  >
    <div
      class="unit-header"
    >
      <div
        class="image "
      >
        <svg
          id="OBJECTS"
          viewBox="0 0 296.11 370.03"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M229.45,117.57c-.71,0-1.42-.09-2.13-.29L54.91,69.7c-4.26-1.18-6.76-5.58-5.58-9.84,1.18-4.26,5.58-6.76,9.84-5.58l172.41,47.58c4.26,1.18,6.76,5.58,5.58,9.84-.98,3.55-4.2,5.87-7.71,5.87Z"
          />
          <path
            d="M57.03,117.57c-3.51,0-6.73-2.33-7.71-5.87-1.17-4.26,1.32-8.66,5.58-9.84L227.32,54.28c4.26-1.17,8.66,1.32,9.84,5.58,1.17,4.26-1.32,8.66-5.58,9.84L59.16,117.28c-.71,.2-1.43,.29-2.13,.29Z"
          />
          <path
            d="M76.94,209.29c-.21,0-.42,0-.63-.02-4.41-.35-7.7-4.2-7.35-8.6l7.19-91.72c.35-4.4,4.21-7.69,8.6-7.35,4.41,.35,7.7,4.2,7.35,8.6l-7.19,91.72c-.33,4.19-3.83,7.38-7.97,7.38Z"
          />
          <path
            d="M207.42,176.55l-11.57-65.59c-.77-4.35,2.14-8.5,6.49-9.27,4.35-.77,8.5,2.14,9.27,6.49l11.57,65.59-15.76,2.78Z"
          />
          <path
            d="M65.39,225.47c19.6-25.36,53.49-38.2,84.89-36.29,18.1,1.1,36.36,3.91,54.4,.67,5.29-.95,10.3-2.61,15.22-4.76,3.86-1.7,8.03-4.5,12.4-3.02,7.56,2.57,6.49,11.51,.97,15.51-8.33,6.03-20.77,7.53-30.67,8.3-12.68,1-25.42,.51-38.11,1.28-4.42,.27-7.41,3.34-7.74,7.74-.54,7.21-.42,14.62,.41,21.8,.35,3.09,2.13,6.91,5.68,7.46,19.18,2.99,37.15,19.11,48.01,35.19,3.55,5.25,20.28,31.81,3.23,30.42-6.59-.54-11.18-7.05-14.39-12.15-4.45-7.07-8.32-14.23-14.1-20.36-9.26-9.82-21.25-18.83-35.53-16.02-13.15,2.59-24.85,15.58-30.12,27.43-3.94,8.86-3.63,22.96-16.17,24.08-15.53,1.39-4.03-26.9-1-33.21,4.67-9.75,12.19-17.83,20.86-25.44,5.19-4.55,12.62-6.36,14.52-13.8,2.04-7.96,.7-16.89-.27-24.88-.6-5.01-4.45-8.78-9.8-7.46-9.8,2.41-19.9,6.11-27.99,12.26-4.04,3.07-7.92,6.31-11.76,9.63-4.88,4.22-11.5,12.29-19.04,10.44-6.17-1.52-5.4-12.34-2.7-16.38,5.56-8.3-7.84-16.06-13.36-7.81-5.81,8.68-5.1,21.86,.25,30.66,7.07,11.62,23.36,10.98,33.63,4.26,6.99-4.57,12.96-11.06,19.43-16.37,2.06-1.69-.82,.58,1.36-1.06,1.17-.88,2.33-1.78,3.57-2.56,6.27-3.97,13.58-6.38,20.73-8.14l-9.8-7.46c.6,4.96,1.45,10.02,1.23,15.03-.07,1.46-.29,2.89-.35,4.35-.04,.86-.43,1.7,.03,1.14,.23-.28-2.71,1.18-3.19,1.48-1.57,.99-3.04,2.13-4.49,3.28-2.9,2.29-5.6,4.8-8.18,7.43-8.17,8.32-15.16,16.67-19.8,27.49-6.19,14.43-13.72,38.05,2.51,48.74,13.26,8.74,31.93,1.17,38.46-12.56,2.85-5.99,3.13-12.72,6.29-18.69,2.9-5.48,7.81-11.15,13.05-14.48,13.01-8.26,26.72,7.78,32.97,17.79,8.89,14.23,19.3,32.22,39.16,28.28,8.12-1.61,14.32-7.89,16.34-15.86,2.41-9.47-1.36-17.97-5.64-26.25-7.83-15.16-19.1-28.36-32.71-38.61-8.98-6.75-19.85-13.01-31.12-14.76l5.68,7.46c-.82-7.18-.95-14.59-.41-21.8l-7.74,7.74c24.29-1.48,50.49,1.56,73.03-9.65,9.82-4.89,16.81-14.4,15.6-25.71-1.21-11.32-10.27-19.95-21.54-21.02-5.85-.55-11.11,1.58-16.32,3.99-5.47,2.52-11.13,4.27-17.13,5.05-11.47,1.49-23.29,.29-34.77-.6-19.84-1.54-38.8-1.63-57.88,5.13-19.22,6.81-38.41,18.37-51.03,34.7-2.57,3.33-3.19,7.69,0,10.94,2.64,2.7,8.39,3.3,10.94,0Z"
          />
          <path
            d="M141.93,189.22c-22.48,0-40.78-18.29-40.78-40.77s18.29-40.77,40.78-40.77,40.77,18.29,40.77,40.77-18.29,40.77-40.77,40.77Zm0-65.55c-13.66,0-24.78,11.11-24.78,24.77s11.11,24.77,24.78,24.77,24.77-11.11,24.77-24.77-11.11-24.77-24.77-24.77Z"
          />
        </svg>
      </div>
      <div
        class="obj-name"
      >
        <div
          class="meta-info-container"
        >
          <div
            class="meta-info"
          >
            <h1>
              Who do you want to be?
            </h1>
          </div>
        </div>
      </div>
      <div
        class="action-menu-container"
      />
    </div>
  </div>
  <div
    class="mod-impersonate-container"
  >
    <div
      class="mod-impersonate"
    >
      <div
        class="impersonate"
      >
        <div
          class="select-field"
        >
          <label
            for="Organisation"
          >
            Organisation
          </label>
          <div
            class="select-field-inner"
          >
            <div
              class="input-select-inner css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-6-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class="select-inner__control css-13cymwt-control"
              >
                <div
                  class="select-inner__value-container css-hlgwow"
                >
                  <div
                    class="select-inner__placeholder css-1jqq78o-placeholder"
                    id="react-select-6-placeholder"
                  >
                    Search and select an organisation to narrow the search result for users...
                  </div>
                  <div
                    class="select-inner__input-container css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-6-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class="select-inner__input"
                      id="react-select-6-input"
                      role="combobox"
                      spellcheck="false"
                      style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="select-inner__indicators css-1wy0on6"
                >
                  <span
                    class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sds--checkbox-container sds--tooltip-parent checkbox "
        >
          <input
            id="organisationAdminsOnly"
            type="checkbox"
          />
          <label
            for="organisationAdminsOnly"
          >
            <span
              class="sds--checkbox--visual"
            >
              <svg
                height="11.9"
                viewBox="0 0 13.6 11.9"
                width="13.6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.9.4-7 9.6-3.3-3.2c-.4-.4-1-.4-1.3 0-.4.4-.4 1 0 1.3l3.2 3.2q.6.6 1.5.6c.9 0 1.1-.3 1.4-.8l7.1-9.6c.3-.4.2-1-.2-1.3-.5-.3-1.1-.2-1.4.2"
                />
              </svg>
            </span>
            <span
              class="checkbox--text"
            >
              Only show the admins of organisations
            </span>
          </label>
        </div>
        <div
          class="select-field"
        >
          <label
            for="Collaboration"
          >
            Collaboration
          </label>
          <div
            class="select-field-inner"
          >
            <div
              class="input-select-inner css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-7-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class="select-inner__control css-13cymwt-control"
              >
                <div
                  class="select-inner__value-container css-hlgwow"
                >
                  <div
                    class="select-inner__placeholder css-1jqq78o-placeholder"
                    id="react-select-7-placeholder"
                  >
                    Search and select a collaboration to narrow the search result for users...
                  </div>
                  <div
                    class="select-inner__input-container css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-7-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class="select-inner__input"
                      id="react-select-7-input"
                      role="combobox"
                      spellcheck="false"
                      style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="select-inner__indicators css-1wy0on6"
                >
                  <span
                    class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sds--checkbox-container sds--tooltip-parent checkbox "
        >
          <input
            id="collaborationAdminsOnly"
            type="checkbox"
          />
          <label
            for="collaborationAdminsOnly"
          >
            <span
              class="sds--checkbox--visual"
            >
              <svg
                height="11.9"
                viewBox="0 0 13.6 11.9"
                width="13.6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.9.4-7 9.6-3.3-3.2c-.4-.4-1-.4-1.3 0-.4.4-.4 1 0 1.3l3.2 3.2q.6.6 1.5.6c.9 0 1.1-.3 1.4-.8l7.1-9.6c.3-.4.2-1-.2-1.3-.5-.3-1.1-.2-1.4.2"
                />
              </svg>
            </span>
            <span
              class="checkbox--text"
            >
              Only show the admins of collaborations
            </span>
          </label>
        </div>
        <section
          class="user-search"
        >
          <div
            class="search"
            tabindex="-1"
          >
            <label
              class="autocomplete-label"
              for="user"
            >
              User
            </label>
            <span
              class="outer-search"
            >
              <input
                class=""
                placeholder="Search and select a user to impersonate..."
                type="text"
                value=""
              />
            </span>
          </div>
        </section>
        <div
          class="input-field sds--text-field  "
        >
          <label
            for="Impersonation"
          >
            Impersonation
          </label>
          <div
            class="inner-input-field"
          >
            <input
              class="sds--text-field--input sds--text-field--input"
              disabled=""
              maxlength="255"
              placeholder=""
              type="text"
              value="You are who you are - no impersonation"
            />
          </div>
        </div>
        <section
          class="actions"
        >
          <button
            class="sds--btn sds--btn--secondary     "
            disabled=""
            type="button"
          >
            <span
              class="textual"
            >
              Stop impersonating
            </span>
          </button>
          <button
            class="sds--btn sds--btn--primary     "
            type="button"
          >
            <span
              class="textual"
            >
              Impersonate
            </span>
          </button>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Impersonate > matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="unit-header-container"
  >
    <div
      class="unit-header"
    >
      <div
        class="image "
      >
        <svg
          id="OBJECTS"
          viewBox="0 0 296.11 370.03"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M229.45,117.57c-.71,0-1.42-.09-2.13-.29L54.91,69.7c-4.26-1.18-6.76-5.58-5.58-9.84,1.18-4.26,5.58-6.76,9.84-5.58l172.41,47.58c4.26,1.18,6.76,5.58,5.58,9.84-.98,3.55-4.2,5.87-7.71,5.87Z"
          />
          <path
            d="M57.03,117.57c-3.51,0-6.73-2.33-7.71-5.87-1.17-4.26,1.32-8.66,5.58-9.84L227.32,54.28c4.26-1.17,8.66,1.32,9.84,5.58,1.17,4.26-1.32,8.66-5.58,9.84L59.16,117.28c-.71,.2-1.43,.29-2.13,.29Z"
          />
          <path
            d="M76.94,209.29c-.21,0-.42,0-.63-.02-4.41-.35-7.7-4.2-7.35-8.6l7.19-91.72c.35-4.4,4.21-7.69,8.6-7.35,4.41,.35,7.7,4.2,7.35,8.6l-7.19,91.72c-.33,4.19-3.83,7.38-7.97,7.38Z"
          />
          <path
            d="M207.42,176.55l-11.57-65.59c-.77-4.35,2.14-8.5,6.49-9.27,4.35-.77,8.5,2.14,9.27,6.49l11.57,65.59-15.76,2.78Z"
          />
          <path
            d="M65.39,225.47c19.6-25.36,53.49-38.2,84.89-36.29,18.1,1.1,36.36,3.91,54.4,.67,5.29-.95,10.3-2.61,15.22-4.76,3.86-1.7,8.03-4.5,12.4-3.02,7.56,2.57,6.49,11.51,.97,15.51-8.33,6.03-20.77,7.53-30.67,8.3-12.68,1-25.42,.51-38.11,1.28-4.42,.27-7.41,3.34-7.74,7.74-.54,7.21-.42,14.62,.41,21.8,.35,3.09,2.13,6.91,5.68,7.46,19.18,2.99,37.15,19.11,48.01,35.19,3.55,5.25,20.28,31.81,3.23,30.42-6.59-.54-11.18-7.05-14.39-12.15-4.45-7.07-8.32-14.23-14.1-20.36-9.26-9.82-21.25-18.83-35.53-16.02-13.15,2.59-24.85,15.58-30.12,27.43-3.94,8.86-3.63,22.96-16.17,24.08-15.53,1.39-4.03-26.9-1-33.21,4.67-9.75,12.19-17.83,20.86-25.44,5.19-4.55,12.62-6.36,14.52-13.8,2.04-7.96,.7-16.89-.27-24.88-.6-5.01-4.45-8.78-9.8-7.46-9.8,2.41-19.9,6.11-27.99,12.26-4.04,3.07-7.92,6.31-11.76,9.63-4.88,4.22-11.5,12.29-19.04,10.44-6.17-1.52-5.4-12.34-2.7-16.38,5.56-8.3-7.84-16.06-13.36-7.81-5.81,8.68-5.1,21.86,.25,30.66,7.07,11.62,23.36,10.98,33.63,4.26,6.99-4.57,12.96-11.06,19.43-16.37,2.06-1.69-.82,.58,1.36-1.06,1.17-.88,2.33-1.78,3.57-2.56,6.27-3.97,13.58-6.38,20.73-8.14l-9.8-7.46c.6,4.96,1.45,10.02,1.23,15.03-.07,1.46-.29,2.89-.35,4.35-.04,.86-.43,1.7,.03,1.14,.23-.28-2.71,1.18-3.19,1.48-1.57,.99-3.04,2.13-4.49,3.28-2.9,2.29-5.6,4.8-8.18,7.43-8.17,8.32-15.16,16.67-19.8,27.49-6.19,14.43-13.72,38.05,2.51,48.74,13.26,8.74,31.93,1.17,38.46-12.56,2.85-5.99,3.13-12.72,6.29-18.69,2.9-5.48,7.81-11.15,13.05-14.48,13.01-8.26,26.72,7.78,32.97,17.79,8.89,14.23,19.3,32.22,39.16,28.28,8.12-1.61,14.32-7.89,16.34-15.86,2.41-9.47-1.36-17.97-5.64-26.25-7.83-15.16-19.1-28.36-32.71-38.61-8.98-6.75-19.85-13.01-31.12-14.76l5.68,7.46c-.82-7.18-.95-14.59-.41-21.8l-7.74,7.74c24.29-1.48,50.49,1.56,73.03-9.65,9.82-4.89,16.81-14.4,15.6-25.71-1.21-11.32-10.27-19.95-21.54-21.02-5.85-.55-11.11,1.58-16.32,3.99-5.47,2.52-11.13,4.27-17.13,5.05-11.47,1.49-23.29,.29-34.77-.6-19.84-1.54-38.8-1.63-57.88,5.13-19.22,6.81-38.41,18.37-51.03,34.7-2.57,3.33-3.19,7.69,0,10.94,2.64,2.7,8.39,3.3,10.94,0Z"
          />
          <path
            d="M141.93,189.22c-22.48,0-40.78-18.29-40.78-40.77s18.29-40.77,40.78-40.77,40.77,18.29,40.77,40.77-18.29,40.77-40.77,40.77Zm0-65.55c-13.66,0-24.78,11.11-24.78,24.77s11.11,24.77,24.78,24.77,24.77-11.11,24.77-24.77-11.11-24.77-24.77-24.77Z"
          />
        </svg>
      </div>
      <div
        class="obj-name"
      >
        <div
          class="meta-info-container"
        >
          <div
            class="meta-info"
          >
            <h1>
              Who do you want to be?
            </h1>
          </div>
        </div>
      </div>
      <div
        class="action-menu-container"
      />
    </div>
  </div>
  <div
    class="mod-impersonate-container"
  >
    <div
      class="mod-impersonate"
    >
      <div
        class="impersonate"
      >
        <div
          class="select-field"
        >
          <label
            for="Organisation"
          >
            Organisation
          </label>
          <div
            class="select-field-inner"
          >
            <div
              class="input-select-inner css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-2-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class="select-inner__control css-13cymwt-control"
              >
                <div
                  class="select-inner__value-container css-hlgwow"
                >
                  <div
                    class="select-inner__placeholder css-1jqq78o-placeholder"
                    id="react-select-2-placeholder"
                  >
                    Search and select an organisation to narrow the search result for users...
                  </div>
                  <div
                    class="select-inner__input-container css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-2-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class="select-inner__input"
                      id="react-select-2-input"
                      role="combobox"
                      spellcheck="false"
                      style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="select-inner__indicators css-1wy0on6"
                >
                  <span
                    class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sds--checkbox-container sds--tooltip-parent checkbox "
        >
          <input
            id="organisationAdminsOnly"
            type="checkbox"
          />
          <label
            for="organisationAdminsOnly"
          >
            <span
              class="sds--checkbox--visual"
            >
              <svg
                height="11.9"
                viewBox="0 0 13.6 11.9"
                width="13.6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.9.4-7 9.6-3.3-3.2c-.4-.4-1-.4-1.3 0-.4.4-.4 1 0 1.3l3.2 3.2q.6.6 1.5.6c.9 0 1.1-.3 1.4-.8l7.1-9.6c.3-.4.2-1-.2-1.3-.5-.3-1.1-.2-1.4.2"
                />
              </svg>
            </span>
            <span
              class="checkbox--text"
            >
              Only show the admins of organisations
            </span>
          </label>
        </div>
        <div
          class="select-field"
        >
          <label
            for="Collaboration"
          >
            Collaboration
          </label>
          <div
            class="select-field-inner"
          >
            <div
              class="input-select-inner css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-3-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class="select-inner__control css-13cymwt-control"
              >
                <div
                  class="select-inner__value-container css-hlgwow"
                >
                  <div
                    class="select-inner__placeholder css-1jqq78o-placeholder"
                    id="react-select-3-placeholder"
                  >
                    Search and select a collaboration to narrow the search result for users...
                  </div>
                  <div
                    class="select-inner__input-container css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-3-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class="select-inner__input"
                      id="react-select-3-input"
                      role="combobox"
                      spellcheck="false"
                      style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="select-inner__indicators css-1wy0on6"
                >
                  <span
                    class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sds--checkbox-container sds--tooltip-parent checkbox "
        >
          <input
            id="collaborationAdminsOnly"
            type="checkbox"
          />
          <label
            for="collaborationAdminsOnly"
          >
            <span
              class="sds--checkbox--visual"
            >
              <svg
                height="11.9"
                viewBox="0 0 13.6 11.9"
                width="13.6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.9.4-7 9.6-3.3-3.2c-.4-.4-1-.4-1.3 0-.4.4-.4 1 0 1.3l3.2 3.2q.6.6 1.5.6c.9 0 1.1-.3 1.4-.8l7.1-9.6c.3-.4.2-1-.2-1.3-.5-.3-1.1-.2-1.4.2"
                />
              </svg>
            </span>
            <span
              class="checkbox--text"
            >
              Only show the admins of collaborations
            </span>
          </label>
        </div>
        <section
          class="user-search"
        >
          <div
            class="search"
            tabindex="-1"
          >
            <label
              class="autocomplete-label"
              for="user"
            >
              User
            </label>
            <span
              class="outer-search"
            >
              <input
                class=""
                placeholder="Search and select a user to impersonate..."
                type="text"
                value=""
              />
            </span>
          </div>
        </section>
        <div
          class="input-field sds--text-field  "
        >
          <label
            for="Impersonation"
          >
            Impersonation
          </label>
          <div
            class="inner-input-field"
          >
            <input
              class="sds--text-field--input sds--text-field--input"
              disabled=""
              maxlength="255"
              placeholder=""
              type="text"
              value="You are who you are - no impersonation"
            />
          </div>
        </div>
        <section
          class="actions"
        >
          <button
            class="sds--btn sds--btn--secondary     "
            disabled=""
            type="button"
          >
            <span
              class="textual"
            >
              Stop impersonating
            </span>
          </button>
          <button
            class="sds--btn sds--btn--primary     "
            type="button"
          >
            <span
              class="textual"
            >
              Impersonate
            </span>
          </button>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Impersonate matches snapshot when impersonating a user 1`] = `
<DocumentFragment>
  <div
    class="unit-header-container"
  >
    <div
      class="unit-header"
    >
      <div
        class="image "
      >
        <svg>
          puppet_new.svg
        </svg>
      </div>
      <div
        class="obj-name"
      >
        <div
          class="meta-info-container"
        >
          <div
            class="meta-info"
          >
            <h1>
              Who do you want to be?
            </h1>
          </div>
        </div>
      </div>
      <div
        class="action-menu-container"
      />
    </div>
  </div>
  <div
    class="mod-impersonate-container"
  >
    <div
      class="mod-impersonate"
    >
      <div
        class="impersonate"
      >
        <div
          class="select-field"
        >
          <label
            for="Organisation"
          >
            Organisation
          </label>
          <div
            class="select-field-inner"
          >
            <div
              class="input-select-inner css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-4-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class="select-inner__control css-13cymwt-control"
              >
                <div
                  class="select-inner__value-container css-hlgwow"
                >
                  <div
                    class="select-inner__placeholder css-1jqq78o-placeholder"
                    id="react-select-4-placeholder"
                  >
                    Search and select an organisation to narrow the search result for users...
                  </div>
                  <div
                    class="select-inner__input-container css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-4-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class="select-inner__input"
                      id="react-select-4-input"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="select-inner__indicators css-1wy0on6"
                >
                  <span
                    class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sds--checkbox-container sds--tooltip-parent checkbox "
        >
          <input
            id="organisationAdminsOnly"
            type="checkbox"
          />
          <label
            for="organisationAdminsOnly"
          >
            <span
              class="sds--checkbox--visual"
            >
              <svg
                height="11.9"
                viewBox="0 0 13.6 11.9"
                width="13.6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.9.4-7 9.6-3.3-3.2c-.4-.4-1-.4-1.3 0-.4.4-.4 1 0 1.3l3.2 3.2q.6.6 1.5.6c.9 0 1.1-.3 1.4-.8l7.1-9.6c.3-.4.2-1-.2-1.3-.5-.3-1.1-.2-1.4.2"
                />
              </svg>
            </span>
            <span
              class="checkbox--text"
            >
              Only show the admins of organisations
            </span>
          </label>
        </div>
        <div
          class="select-field"
        >
          <label
            for="Collaboration"
          >
            Collaboration
          </label>
          <div
            class="select-field-inner"
          >
            <div
              class="input-select-inner css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-5-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class="select-inner__control css-13cymwt-control"
              >
                <div
                  class="select-inner__value-container css-hlgwow"
                >
                  <div
                    class="select-inner__placeholder css-1jqq78o-placeholder"
                    id="react-select-5-placeholder"
                  >
                    Search and select a collaboration to narrow the search result for users...
                  </div>
                  <div
                    class="select-inner__input-container css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-5-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class="select-inner__input"
                      id="react-select-5-input"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="select-inner__indicators css-1wy0on6"
                >
                  <span
                    class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sds--checkbox-container sds--tooltip-parent checkbox "
        >
          <input
            id="collaborationAdminsOnly"
            type="checkbox"
          />
          <label
            for="collaborationAdminsOnly"
          >
            <span
              class="sds--checkbox--visual"
            >
              <svg
                height="11.9"
                viewBox="0 0 13.6 11.9"
                width="13.6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.9.4-7 9.6-3.3-3.2c-.4-.4-1-.4-1.3 0-.4.4-.4 1 0 1.3l3.2 3.2q.6.6 1.5.6c.9 0 1.1-.3 1.4-.8l7.1-9.6c.3-.4.2-1-.2-1.3-.5-.3-1.1-.2-1.4.2"
                />
              </svg>
            </span>
            <span
              class="checkbox--text"
            >
              Only show the admins of collaborations
            </span>
          </label>
        </div>
        <section
          class="user-search"
        >
          <div
            class="search"
            tabindex="-1"
          >
            <label
              class="autocomplete-label"
              for="user"
            >
              User
            </label>
            <span
              class="outer-search"
            >
              <input
                class=""
                placeholder="Search and select a user to impersonate..."
                type="text"
                value=""
              />
            </span>
          </div>
        </section>
        <div
          class="input-field sds--text-field  "
        >
          <label
            for="Impersonation"
          >
            Impersonation
          </label>
          <div
            class="inner-input-field"
          >
            <input
              class="sds--text-field--input sds--text-field--input"
              disabled=""
              maxlength="255"
              placeholder=""
              type="text"
              value="You are who you are - no impersonation"
            />
          </div>
        </div>
        <section
          class="actions"
        >
          <button
            class="sds--btn sds--btn--secondary     "
            disabled=""
            type="button"
          >
            <span
              class="textual"
            >
              Stop impersonating
            </span>
          </button>
          <button
            class="sds--btn sds--btn--primary     "
            type="button"
          >
            <span
              class="textual"
            >
              Impersonate
            </span>
          </button>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Impersonate matches snapshot when not impersonating a user 1`] = `
<DocumentFragment>
  <div
    class="unit-header-container"
  >
    <div
      class="unit-header"
    >
      <div
        class="image "
      >
        <svg>
          puppet_new.svg
        </svg>
      </div>
      <div
        class="obj-name"
      >
        <div
          class="meta-info-container"
        >
          <div
            class="meta-info"
          >
            <h1>
              Who do you want to be?
            </h1>
          </div>
        </div>
      </div>
      <div
        class="action-menu-container"
      />
    </div>
  </div>
  <div
    class="mod-impersonate-container"
  >
    <div
      class="mod-impersonate"
    >
      <div
        class="impersonate"
      >
        <div
          class="select-field"
        >
          <label
            for="Organisation"
          >
            Organisation
          </label>
          <div
            class="select-field-inner"
          >
            <div
              class="input-select-inner css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-6-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class="select-inner__control css-13cymwt-control"
              >
                <div
                  class="select-inner__value-container css-hlgwow"
                >
                  <div
                    class="select-inner__placeholder css-1jqq78o-placeholder"
                    id="react-select-6-placeholder"
                  >
                    Search and select an organisation to narrow the search result for users...
                  </div>
                  <div
                    class="select-inner__input-container css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-6-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class="select-inner__input"
                      id="react-select-6-input"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="select-inner__indicators css-1wy0on6"
                >
                  <span
                    class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sds--checkbox-container sds--tooltip-parent checkbox "
        >
          <input
            id="organisationAdminsOnly"
            type="checkbox"
          />
          <label
            for="organisationAdminsOnly"
          >
            <span
              class="sds--checkbox--visual"
            >
              <svg
                height="11.9"
                viewBox="0 0 13.6 11.9"
                width="13.6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.9.4-7 9.6-3.3-3.2c-.4-.4-1-.4-1.3 0-.4.4-.4 1 0 1.3l3.2 3.2q.6.6 1.5.6c.9 0 1.1-.3 1.4-.8l7.1-9.6c.3-.4.2-1-.2-1.3-.5-.3-1.1-.2-1.4.2"
                />
              </svg>
            </span>
            <span
              class="checkbox--text"
            >
              Only show the admins of organisations
            </span>
          </label>
        </div>
        <div
          class="select-field"
        >
          <label
            for="Collaboration"
          >
            Collaboration
          </label>
          <div
            class="select-field-inner"
          >
            <div
              class="input-select-inner css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-7-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class="select-inner__control css-13cymwt-control"
              >
                <div
                  class="select-inner__value-container css-hlgwow"
                >
                  <div
                    class="select-inner__placeholder css-1jqq78o-placeholder"
                    id="react-select-7-placeholder"
                  >
                    Search and select a collaboration to narrow the search result for users...
                  </div>
                  <div
                    class="select-inner__input-container css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-7-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class="select-inner__input"
                      id="react-select-7-input"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="select-inner__indicators css-1wy0on6"
                >
                  <span
                    class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sds--checkbox-container sds--tooltip-parent checkbox "
        >
          <input
            id="collaborationAdminsOnly"
            type="checkbox"
          />
          <label
            for="collaborationAdminsOnly"
          >
            <span
              class="sds--checkbox--visual"
            >
              <svg
                height="11.9"
                viewBox="0 0 13.6 11.9"
                width="13.6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.9.4-7 9.6-3.3-3.2c-.4-.4-1-.4-1.3 0-.4.4-.4 1 0 1.3l3.2 3.2q.6.6 1.5.6c.9 0 1.1-.3 1.4-.8l7.1-9.6c.3-.4.2-1-.2-1.3-.5-.3-1.1-.2-1.4.2"
                />
              </svg>
            </span>
            <span
              class="checkbox--text"
            >
              Only show the admins of collaborations
            </span>
          </label>
        </div>
        <section
          class="user-search"
        >
          <div
            class="search"
            tabindex="-1"
          >
            <label
              class="autocomplete-label"
              for="user"
            >
              User
            </label>
            <span
              class="outer-search"
            >
              <input
                class=""
                placeholder="Search and select a user to impersonate..."
                type="text"
                value=""
              />
            </span>
          </div>
        </section>
        <div
          class="input-field sds--text-field  "
        >
          <label
            for="Impersonation"
          >
            Impersonation
          </label>
          <div
            class="inner-input-field"
          >
            <input
              class="sds--text-field--input sds--text-field--input"
              disabled=""
              maxlength="255"
              placeholder=""
              type="text"
              value="You are who you are - no impersonation"
            />
          </div>
        </div>
        <section
          class="actions"
        >
          <button
            class="sds--btn sds--btn--secondary     "
            disabled=""
            type="button"
          >
            <span
              class="textual"
            >
              Stop impersonating
            </span>
          </button>
          <button
            class="sds--btn sds--btn--primary     "
            type="button"
          >
            <span
              class="textual"
            >
              Impersonate
            </span>
          </button>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Impersonate matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="unit-header-container"
  >
    <div
      class="unit-header"
    >
      <div
        class="image "
      >
        <svg>
          puppet_new.svg
        </svg>
      </div>
      <div
        class="obj-name"
      >
        <div
          class="meta-info-container"
        >
          <div
            class="meta-info"
          >
            <h1>
              Who do you want to be?
            </h1>
          </div>
        </div>
      </div>
      <div
        class="action-menu-container"
      />
    </div>
  </div>
  <div
    class="mod-impersonate-container"
  >
    <div
      class="mod-impersonate"
    >
      <div
        class="impersonate"
      >
        <div
          class="select-field"
        >
          <label
            for="Organisation"
          >
            Organisation
          </label>
          <div
            class="select-field-inner"
          >
            <div
              class="input-select-inner css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-2-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class="select-inner__control css-13cymwt-control"
              >
                <div
                  class="select-inner__value-container css-hlgwow"
                >
                  <div
                    class="select-inner__placeholder css-1jqq78o-placeholder"
                    id="react-select-2-placeholder"
                  >
                    Search and select an organisation to narrow the search result for users...
                  </div>
                  <div
                    class="select-inner__input-container css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-2-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class="select-inner__input"
                      id="react-select-2-input"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="select-inner__indicators css-1wy0on6"
                >
                  <span
                    class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sds--checkbox-container sds--tooltip-parent checkbox "
        >
          <input
            id="organisationAdminsOnly"
            type="checkbox"
          />
          <label
            for="organisationAdminsOnly"
          >
            <span
              class="sds--checkbox--visual"
            >
              <svg
                height="11.9"
                viewBox="0 0 13.6 11.9"
                width="13.6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.9.4-7 9.6-3.3-3.2c-.4-.4-1-.4-1.3 0-.4.4-.4 1 0 1.3l3.2 3.2q.6.6 1.5.6c.9 0 1.1-.3 1.4-.8l7.1-9.6c.3-.4.2-1-.2-1.3-.5-.3-1.1-.2-1.4.2"
                />
              </svg>
            </span>
            <span
              class="checkbox--text"
            >
              Only show the admins of organisations
            </span>
          </label>
        </div>
        <div
          class="select-field"
        >
          <label
            for="Collaboration"
          >
            Collaboration
          </label>
          <div
            class="select-field-inner"
          >
            <div
              class="input-select-inner css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-3-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class="select-inner__control css-13cymwt-control"
              >
                <div
                  class="select-inner__value-container css-hlgwow"
                >
                  <div
                    class="select-inner__placeholder css-1jqq78o-placeholder"
                    id="react-select-3-placeholder"
                  >
                    Search and select a collaboration to narrow the search result for users...
                  </div>
                  <div
                    class="select-inner__input-container css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-3-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class="select-inner__input"
                      id="react-select-3-input"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="select-inner__indicators css-1wy0on6"
                >
                  <span
                    class="select-inner__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="select-inner__indicator select-inner__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sds--checkbox-container sds--tooltip-parent checkbox "
        >
          <input
            id="collaborationAdminsOnly"
            type="checkbox"
          />
          <label
            for="collaborationAdminsOnly"
          >
            <span
              class="sds--checkbox--visual"
            >
              <svg
                height="11.9"
                viewBox="0 0 13.6 11.9"
                width="13.6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m11.9.4-7 9.6-3.3-3.2c-.4-.4-1-.4-1.3 0-.4.4-.4 1 0 1.3l3.2 3.2q.6.6 1.5.6c.9 0 1.1-.3 1.4-.8l7.1-9.6c.3-.4.2-1-.2-1.3-.5-.3-1.1-.2-1.4.2"
                />
              </svg>
            </span>
            <span
              class="checkbox--text"
            >
              Only show the admins of collaborations
            </span>
          </label>
        </div>
        <section
          class="user-search"
        >
          <div
            class="search"
            tabindex="-1"
          >
            <label
              class="autocomplete-label"
              for="user"
            >
              User
            </label>
            <span
              class="outer-search"
            >
              <input
                class=""
                placeholder="Search and select a user to impersonate..."
                type="text"
                value=""
              />
            </span>
          </div>
        </section>
        <div
          class="input-field sds--text-field  "
        >
          <label
            for="Impersonation"
          >
            Impersonation
          </label>
          <div
            class="inner-input-field"
          >
            <input
              class="sds--text-field--input sds--text-field--input"
              disabled=""
              maxlength="255"
              placeholder=""
              type="text"
              value="You are who you are - no impersonation"
            />
          </div>
        </div>
        <section
          class="actions"
        >
          <button
            class="sds--btn sds--btn--secondary     "
            disabled=""
            type="button"
          >
            <span
              class="textual"
            >
              Stop impersonating
            </span>
          </button>
          <button
            class="sds--btn sds--btn--primary     "
            type="button"
          >
            <span
              class="textual"
            >
              Impersonate
            </span>
          </button>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
